--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div>
-  
+<div class="container-fluid">
+	<app-header></app-header>
+	<app-navbar></app-navbar>
+	<app-body></app-body>
+	<app-footer></app-footer>
 </div>
-
